--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-03 02:50 -->
+<!-- 2022-11-04 02:54 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -46,12 +46,12 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org2cb7c44">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#org54c7191">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org605363b">1.1. window config &amp; register</a></li>
-<li><a href="#org215cfbc">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#orgd10d7d5">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#org3976b67">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#org90a8a29">1.1. window config &amp; register</a></li>
+<li><a href="#orgbcc628e">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#org40de54b">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#org896adcc">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -59,12 +59,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org2cb7c44" class="outline-2">
-<h2 id="org2cb7c44"><span class="section-number-2">1.</span> <a href="#org2cb7c44">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-org54c7191" class="outline-2">
+<h2 id="org54c7191"><span class="section-number-2">1.</span> <a href="#org54c7191">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org605363b" class="outline-3">
-<h3 id="org605363b"><span class="section-number-3">1.1.</span> <a href="#org605363b">window config &amp; register</a></h3>
+<div id="outline-container-org90a8a29" class="outline-3">
+<h3 id="org90a8a29"><span class="section-number-3">1.1.</span> <a href="#org90a8a29">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -78,8 +78,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-org215cfbc" class="outline-3">
-<h3 id="org215cfbc"><span class="section-number-3">1.2.</span> <a href="#org215cfbc"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-orgbcc628e" class="outline-3">
+<h3 id="orgbcc628e"><span class="section-number-3">1.2.</span> <a href="#orgbcc628e"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -102,8 +102,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgd10d7d5" class="outline-3">
-<h3 id="orgd10d7d5"><span class="section-number-3">1.3.</span> <a href="#orgd10d7d5"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-org40de54b" class="outline-3">
+<h3 id="org40de54b"><span class="section-number-3">1.3.</span> <a href="#org40de54b"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -116,8 +116,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org3976b67" class="outline-3">
-<h3 id="org3976b67"><span class="section-number-3">1.4.</span> <a href="#org3976b67"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-org896adcc" class="outline-3">
+<h3 id="org896adcc"><span class="section-number-3">1.4.</span> <a href="#org896adcc"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -136,7 +136,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-03 02:50</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-04 02:54</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
